--- a/BrdgTutCards/nbproject/private/private.properties
+++ b/BrdgTutCards/nbproject/private/private.properties
@@ -1,2 +1,9 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=/home/kevin/.netbeans/11.0/build.properties
+work.dir=/home/kevin/NetBeansProjects/BridgeTut/BrdgTutCards
