--- a/BrdgTutCards/nbproject/project.properties
+++ b/BrdgTutCards/nbproject/project.properties
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/BrdgTutCards.jar
+dist.jar=${dist.dir}/BridgeTutCards.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/BrdgTutCards
+dist.jlink.output=${dist.jlink.dir}/BridgeTutCards
 endorsed.classpath=
 excludes=
 includes=**
@@ -73,10 +73,11 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=BrdgTutCards
-main.class=gameboard.Game
+jlink.launcher.name=BridgeTutCards
+main.class=
+manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=true
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
